# libds

./: CMakeLists.txt  README.md
include/: da.h  ht.h  list.h  tds.h
include/ds/: bst.h  da.h  list.h  stack.h
include/tds/: da.h  stack.h
src/: bst.c  da.c  list.c  stack.c
tests/: test_bst.c  test_da.c  test_ht.c  test_list.c  test_stack.c
